--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!-- Fill In Your Website Language -->
 <html class="no-js" lang="en">
 
 <head>
@@ -15,20 +14,20 @@
 </head>
 
 <body>
-    <h1>Anitza Martins</h1>
-    <h2>The Resumeof Anitza Martins</h2>
-    <p>Anitza has been a candy lover for 27 years. Some examples include</p>
+    <h1  id="Title">Anitza Martins</h1>
+    <h2>The Resume of Anitza Martins</h2>
+    <p>Anitza has been a candy lover for 27 years. Some examples of types & brands include</p>
 
     <ol>
-        <li>Gummy Bears</li>
-        <li>Gummy Worms</li>
-        <li>Sweet/Sour Snakes</li>
+        <li class="blue">Gummy Bears</li>
+        <li class="blue">Gummy Worms</li>
+        <li class="blue">Sweet/Sour Snakes</li>
     </ol>
 
     <ul>
-        <li>Harribo</li>
-        <li>Troli</li>
-        <li>Reeses</li>
+        <li class="blue">Harribo</li>
+        <li class="blue">Troli</li>
+        <li class="blue">Reeses</li>
     </ul>
 </body>
 
