--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-    <h1  id="Title">Anitza Martins</h1>
+    <h1>Anitza Martins</h1>
     <h2>The Resume of Anitza Martins</h2>
     <p>Anitza has been a candy lover for 27 years. Some examples of types & brands include</p>
 
     <ol>
-        <li class="blue">Gummy Bears</li>
-        <li class="blue">Gummy Worms</li>
-        <li class="blue">Sweet/Sour Snakes</li>
+        <li>Gummy Bears</li>
+        <li>Gummy Worms</li>
+        <li>Sweet/Sour Snakes</li>
     </ol>
 
     <ul>
-        <li class="blue">Harribo</li>
-        <li class="blue">Troli</li>
-        <li class="blue">Reeses</li>
+        <li>Harribo</li>
+        <li>Troli</li>
+        <li>Reeses</li>
     </ul>
 </body>
 
